Updated all pages and info

--- a/NewBoot/Homepage.html
+++ b/NewBoot/Homepage.html
@@ -50,7 +50,7 @@
                         <a href="Team.html">Team</a>
                     </li>
                     <li>
-                        <a href="Contact.html">Contact</a>
+                        <a href="contactform.php">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -72,26 +72,28 @@
 					<table style = "width:100%">
 						<form action="demo_form.asp" method="get">
 						<tr>
-						<td><input type="checkbox" name="allergy" value="Allergy1"> I have a Allergy1<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy2"> I have a Allergy2<br</td>
-						<td><input type="checkbox" name="allergy" value="Allergy3"> I have a Allergy3<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy4"> I have a Allergy4<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy5"> I have a Allergy5<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy6"> I have a Allergy6<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy7"> I have a Allergy7<br></td>
+						<td><input type="checkbox" name="allergy" value="Allergy1"> I have an allergy to Egg<br></td>
+						<td><input type="checkbox" name="allergy" value="Allergy2"> I have an allergy to Fish<br</td>
+						<td><input type="checkbox" name="allergy" value="Allergy3"> I have an allergy to Milk<br></td>
+						<td><input type="checkbox" name="allergy" value="Allergy2"> I have an allergy to Peanuts<br</td>
+						<td><input type="checkbox" name="allergy" value="Allergy3"> I have an allergy to Shellfish<br></td>
 						</tr>
 						<tr>
-						<td><input type="checkbox" name="allergy" value="Allergy8"> I have a Allergy8<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy9"> I have a Allergy9<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy10"> I have a Allergy10<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy11"> I have a Allergy11<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy12"> I have a Allergy12<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy13"> I have a Allergy13<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy14"> I have a Allergy14<br></td>
-						<td><input type="checkbox" name="allergy" value="Allergy15"> I have a Allergy15<br></td>
-						<td><input type="submit" value="Submit">
+						<td><input type="checkbox" name="allergy" value="Allergy1"> I have an allergy to Soy<br></td>
+						<td><input type="checkbox" name="allergy" value="Allergy2"> I have an allergy to Tree Nuts<br</td>
+						<td><input type="checkbox" name="allergy" value="Allergy3"> I have an allergy to Wheat<br></td>
+						<td><input type="checkbox" name="allergy" value="Allergy2"> I have an allergy to Garlic<br</td>
+						<td><input type="checkbox" name="allergy" value="Allergy3"> I have an allergy to Gluten<br></td>
+						</tr>
+						<tr>
+						<td><input type="checkbox" name="allergy" value="Allergy1"> I have an allergy to Mushroom<br></td>
+						<td><input type="checkbox" name="allergy" value="Allergy2"> I have an allergy to Onion<br</td>
+						<td><input type="checkbox" name="allergy" value="Allergy3"> I have an allergy to Orange<br></td>
+						<td><input type="checkbox" name="allergy" value="Allergy2"> I have an allergy to Strawberry<br</td>
+						<td><input type="checkbox" name="allergy" value="Allergy3"> I have an allergy to Tomato<br></td>
 						</tr>
 						</form>
+						<FORM METHOD="LINK" ACTION="WhatICanEat.html"><INPUT TYPE="submit" VALUE="Submit"></FORM>
 					</table>
                 </div>
             </div>
@@ -105,7 +107,7 @@
                     </h2>
                     <hr>
                     <hr class="visible-xs">
-                    <p>WORDS WORDS WORDS</p>
+                    <p>We would like to make everyone aware that the information on this site may not be 100% accurate. We make every attempt to identify ingredients that may cause allergic reactions for those with food allergies. Anyone using this data as a guideline to avoid particular allergens should utilize it at his or her own discretion. We cannot assume any liabilities for reactions to food items that are consumed or come in contact with while dining at any location on the University of Arkansas campus.</p>
                 </div>
             </div>
         </div>
