--- a/NewBoot/Team.html
+++ b/NewBoot/Team.html
@@ -74,7 +74,7 @@
                 <div class="col-md-6">
                 </div>
                 <div class="col-md-6">
-                    <p>WORDS BABY DOLL.</p>
+                    <p>Let's talk about how amazingly awesome we are!! :3.</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -96,7 +96,7 @@
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/Mark.jpg" alt="">
                     <h3>Mark Cambri
                         <p><small>Job Title</small></p>
                     </h3>
