--- a/NewBoot/Contact.html
+++ b/NewBoot/Contact.html
@@ -59,7 +59,6 @@
         </div>
         <!-- /.container -->
     </nav>
-	
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -69,36 +68,19 @@
                     </h2>
                     <hr>
                     <p>Some cool words here </p>
-                    <form role="form">
-                        <div class="row">
-                            <div class="form-group col-lg-4">
-                                <label>Name</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="form-group col-lg-4">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control">
-                            </div>
-                            <div class="form-group col-lg-4">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control">
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="form-group col-lg-12">
-                                <label>Message</label>
-                                <textarea class="form-control" rows="6"></textarea>
-                            </div>
-                            <div class="form-group col-lg-12">
-                                <input type="hidden" name="save" value="contact">
-                                <button type="submit" class="btn btn-default">Submit</button>
-                            </div>
-                        </div>
-                    </form>
+                    <form action="MAILTO:ekindle@uark.edu" method="post" enctype="text/plain">
+						Name:<br>
+						<input type="text" name="name" value="your name"><br>
+						E-mail:<br>
+						<input type="text" name="mail" value="your email"><br>
+						Comment:<br>
+						<input type="text" name="comment" value="your comment" size="50"><br><br>
+						<input type="submit" value="Send">
+						<input type="reset" value="Reset">
+					</form>
                 </div>
             </div>
         </div>
-
-    </div>
     <!-- /.container -->
 
     <footer>
